Tue May 15 11:24:34 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2.10.

Tue May 15 11:12:42 GMT 2012  Olly Betts <olly@survex.com>

	* backends/chert/chert_cursor.cc: Fix incorrect use of "delete" to
	  "delete []".  The type is POD, so I suspect this mistake didn't
	  actually cause any problems, and it only happens when a cursor
	  gets rebuilt because the B-tree has gained a level, so it's
	  a rather rare occurrence.

Tue May 15 11:09:44 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.cc: Fix incorrect use of "delete" to
	  "delete []".  The type is POD, so I suspect this mistake didn't
	  actually cause any problems, and it only happens when a cursor
	  gets rebuilt because the B-tree has gained a level, so it's
	  a rather rare occurrence.

Thu May 10 02:16:21 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Update Debian/Ubuntu packaging instructions.

Thu May 10 02:14:48 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: freshmeat -> freecode.

Wed May 09 02:54:40 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Add "safeunistd.h", required for GCC 4.7.

Wed May 09 00:09:17 GMT 2012  Olly Betts <olly@survex.com>

	* api/query.cc: Construct MatchAll using constructor rather than
	  assignment syntax.

Wed May 09 00:08:29 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.h: Whitespace tweaks.

Tue May 08 23:51:01 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Document xapian-check for fixing corrupted
	  databases.

Tue May 08 11:30:06 GMT 2012  Olly Betts <olly@survex.com>

	* common/fileutils.cc: Add safeunistd.h for mkdir, required by GCC
	  4.7 (reported by Gaurav Arora).

Wed May 02 03:44:25 GMT 2012  Olly Betts <olly@survex.com>

	* weight/weightinternal.cc: Using AssertEq() on NULL doesn't compile,
	  at least with recent GCC.

Wed May 02 02:58:37 GMT 2012  Olly Betts <olly@survex.com>
