@@ -607,6 +607,9 @@ class BrassTable {
 		/ block_capacity;
 	}
 
+	/// Throw an exception indicating that the database is closed.
+	XAPIAN_NORETURN(static void throw_database_closed());
+
     protected:
 
 	/** Perform the opening operation to read.
@@ -787,9 +790,6 @@ class BrassTable {
 
 	/* Debugging methods */
 //	void report_block_full(int m, int n, const byte * p);
-
-	/// Throw an exception indicating that the database is closed.
-	XAPIAN_NORETURN(static void throw_database_closed());
 };
 
 #endif /* OM_HGUARD_BRASS_TABLE_H */
