@@ -895,8 +895,7 @@ ChertDatabase::open_term_list(Xapian::docid did) const
     LOGCALL(DB, TermList *, "ChertDatabase::open_term_list", did);
     Assert(did != 0);
     if (!termlist_table.is_open())
-	throw Xapian::FeatureUnavailableError("Database has no termlist");
-
+	throw_termlist_table_close_exception();
     intrusive_ptr<const ChertDatabase> ptrtothis(this);
     RETURN(new ChertTermList(ptrtothis, did));
 }
@@ -1009,6 +1008,16 @@ ChertDatabase::get_uuid() const
 {
     LOGCALL(DB, string, "ChertDatabase::get_uuid", NO_ARGS);
     RETURN(version_file.get_uuid_string());
+}
+
+void
+ChertDatabase::throw_termlist_table_close_exception() const
+{
+    // Either the database has been closed, or else there's no termlist table.
+    // Check if the postlist table is open to determine which is the case.
+    if (!postlist_table.is_open())
+	ChertTable::throw_database_closed();
+    throw Xapian::FeatureUnavailableError("Database has no termlist");
 }
 
 ///////////////////////////////////////////////////////////////////////////
@@ -1227,7 +1236,7 @@ ChertWritableDatabase::delete_document(Xapian::docid did)
     Assert(did != 0);
 
     if (!termlist_table.is_open())
-	throw Xapian::FeatureUnavailableError("Database has no termlist");
+	throw_termlist_table_close_exception();
 
     if (rare(modify_shortcut_docid == did)) {
 	// The modify_shortcut document can't be used for a modification
@@ -1307,7 +1316,7 @@ ChertWritableDatabase::replace_document(Xapian::docid did,
 		(void)add_document_(did, document);
 		return;
 	    }
-	    throw Xapian::FeatureUnavailableError("Database has no termlist");
+	    throw_termlist_table_close_exception();
 	}
 
 	// Check for a document read from this database being replaced - ie, a
