@@ -604,6 +604,9 @@ class XAPIAN_VISIBILITY_DEFAULT ChertTable {
 		/ block_capacity;
 	}
 
+	/// Throw an exception indicating that the database is closed.
+	XAPIAN_NORETURN(static void throw_database_closed());
+
     protected:
 
 	/** Perform the opening operation to read.
@@ -793,9 +796,6 @@ class XAPIAN_VISIBILITY_DEFAULT ChertTable {
 
 	/* Debugging methods */
 //	void report_block_full(int m, int n, const byte * p);
-
-	/// Throw an exception indicating that the database is closed.
-	XAPIAN_NORETURN(static void throw_database_closed());
 };
 
 #endif /* OM_HGUARD_CHERT_TABLE_H */
