@@ -1,3 +1,13 @@
+Thu May 17 14:26:11 GMT 2012  Olly Betts <olly@survex.com>
+
+	* backends/brass/,backends/chert/: After closing the database, methods
+	  which try to use the termlist would throw FeatureUnavailableError
+	  with message "Database has no termlist", assuming that the termlist
+	  table not being open meant it wasn't present.  Fix to check if the
+	  postlist_table is open to determine which case we're in.
+	* tests/api_closedb.cc: Improve test coverage for closed databases.
+	  (ticket#337)
+
 Tue May 15 11:24:34 GMT 2012  Olly Betts <olly@survex.com>
 
 	* NEWS: Update from ChangeLog and 1.2.10.
